new my-script.js file create

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <th>Password</th>
             <td>
                 <input type="password" name="password" id="password"/>
+                <input type="checkbox" id="checkbox"/> Show Password
                 <span id="passwordError" style="color: red;"></span>
             </td>
         </tr>
